# RAGE-rustic-ascii-graphic-engine

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Gemfile  LICENSE.md  Makefile  README.md  _config.yml  developpement.html  index.md  main.c
_dev/: app.md  app_final.md  ascii.md  camera.md  normale.md  parseur.md  rasterizer.md  website.md
_layouts/: default.html  post.html
_sass/: jekyll-theme-minimal.scss
includes/: api.h  camera.h  clipping.h  h_triangle.h  matrix.h  obj.h  parser.h  projection.h  rasterizer.h  t_matrix.h  tmatrix.h  triangle.h  vector3.h  vector4.h  vertex.h  win.h
src/: CMakeLists.txt  Makefile  api.c  api.h  camera.c  camera.h  clipping.c  h_triangle.c  matrix.c  matrix.h  obj.c  obj.h  parser.c  parser.h  projection.c  projection.h  rasterizer.c  rasterizer.h  t_matrix.c  tmatrix.c  tmatrix.h  triangle.c  vector3.c  vector3.h  vector4.c  vertex.c  win.c  win.h
tests/: CMakeLists.txt  check_clipping.c
